--- a/22 - Follow Along Link Highlighter/index-START.html
+++ b/22 - Follow Along Link Highlighter/index-START.html
@@ -26,7 +26,27 @@
     </div>
 
   <script>
-    // 👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀
+    const triggers = document.querySelectorAll('a');
+    const highlight = document.createElement('span');
+    highlight.classList.add('highlight');
+    document.body.append(highlight);
+
+    function hightlightLink() {
+      const linkCoords = this.getBoundingClientRect();
+      const cords = {
+        width: linkCoords.width,
+        height: linkCoords.height,
+        top: linkCoords.top + window.scrollY,
+        left: linkCoords.left + window.scrollX,
+      };
+      highlight.style.width = `${cords.width}px`;
+      highlight.style.height = `${cords.height}px`;
+      highlight.style.transform = `translate(${cords.left}px, ${cords.top}px`;
+
+
+    }
+
+    triggers.forEach(a => a.addEventListener('mouseenter', hightlightLink))
   </script>
 </body>
 </html>
