--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -25,17 +25,49 @@
       <textarea name="text">Hello! I love JavaScript 👍</textarea>
       <button id="stop">Stop!</button>
       <button id="speak">Speak</button>
-
     </div>
+    
+    <script>
+      const msg = new SpeechSynthesisUtterance();
+      let voices = [];
+      const voicesDropdown = document.querySelector('[name="voice"]');
+      const options = document.querySelectorAll('[type="range"], [name="text"]');
+      const speakButton = document.querySelector('#speak');
+      const stopButton = document.querySelector('#stop');
+      msg.text = document.querySelector('[name="text"]').value;
 
-<script>
-  const msg = new SpeechSynthesisUtterance();
-  let voices = [];
-  const voicesDropdown = document.querySelector('[name="voice"]');
-  const options = document.querySelectorAll('[type="range"], [name="text"]');
-  const speakButton = document.querySelector('#speak');
-  const stopButton = document.querySelector('#stop');
-</script>
+      function populateVoices() {
+        voices = this.getVoices();
+        voicesDropdown.innerHTML = voices
+        .filter(voice => voice.lang.includes('en'))
+        .map(voice => `<option value="${voice.name}">${voice.name} (${voice.lang})</option>`)
+        .join('');
+      }
+
+      function setVoice() {
+        msg.voice = voices.find(voice => voice.name === this.value);
+        toggle();
+      }
+
+      function toggle(startOver = true) {
+        speechSynthesis.cancel();
+        if(startOver) {
+          speechSynthesis.speak(msg);
+        }
+
+      }
+
+      function setOption() {
+        msg[this.name] = this.value
+        toggle();
+      }
+
+      speechSynthesis.addEventListener('voiceschanged', populateVoices);
+      voicesDropdown.addEventListener('change', setVoice);
+      options.forEach(option => option.addEventListener('change',setOption));
+      speakButton.addEventListener('click', toggle);
+      stopButton.addEventListener('click', () => toggle(false))
+    </script>
 
 </body>
 </html>
